apex-validation-rules/main/core/objects/ApexValidationRuleTranslation__mdt/ApexValidationRuleTranslation__mdt.object-meta.xml
<CustomObject>
    <label>Apex Validation Rule Translation</label>
    <pluralLabel>Apex Validation Rule Translations</pluralLabel>
</CustomObject>