apex-validation-rules/main/core/objects/ApexValidationRuleTranslation__mdt/fields/ApexValidationRule__c.field-meta.xml
<CustomField>
    <fullName>ApexValidationRule__c</fullName>
    <label>Apex Validation Rule</label>
    <referenceTo>ApexValidationRule__mdt</referenceTo>
    <relationshipLabel>Apex Validation Rule Translations</relationshipLabel>
    <relationshipName>ApexValidationRuleTranslations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>